div for form detail

--- a/b_example/a02_beginner/html/div_form_join_01.html
+++ b/b_example/a02_beginner/html/div_form_join_01.html
@@ -29,8 +29,8 @@
 					<dd>
 						<!-- input[type=text]#member_01+button[type=button]{중복확인} -->
 						<input type="text" id="member_01" name="idName" value="" 
-										placeholder="사용자 아이디" class="text-box" />
-						<button name="dupCheck" class="btn-check" type="button">중복확인</button>
+										placeholder="사용자 아이디" class="text-box" required="required" autofocus="true" />
+						<button name="dupCheck" class="btn-check" type="button" required="required">중복확인</button>
 						<i class="duplication-check join_img"><!-- check--></i>
 					</dd>
 				</dl>
@@ -46,15 +46,15 @@
 
 					<dd>
 						<input type="text" name="userName" id="member_02" value=""  
-										placeholder="사용자의 이름" class="text-box" />
+										placeholder="사용자의 이름" class="text-box" required="required" />
 					</dd>
 				</dl>
 				<dl class="join_form clearfix">
 					<dt><label for="member_03"><i class="join_img member_03"></i>성별 <span class="hidden">을 선택하세요. <br />기본은 남성입니다.</span><i class="fas fa-asterisk"></i></label></dt>
 					<dd class="gender">
-						<input type="radio" checked="checked" name="gender" value="" id="member_03" />
+						<input type="radio" checked="checked" name="gender" value="" id="member_03" required="required" />
 						<label for="member_03"> <i class="join_img"></i> 남성</label>
-						<input type="radio" name="gender" value="" id="member_03-1" />
+						<input type="radio" name="gender" value="" id="member_03-1" required="required" />
 						<label for="member_03-1"> <i class="join_img"></i> 여성</label>
 					</dd>
 				</dl>
@@ -72,7 +72,7 @@
 						</label>
 					</dt>
 					<dd>
-						<input type="password" id="member_04" name="pwName" value="" placeholder="암호 8~15자 내외 입력" class="text-box" />
+						<input type="password" id="member_04" name="pwName" value="" placeholder="암호 8~15자 내외 입력" class="text-box" required="required" />
 						<label for="member_04" aria-hidden="true">8~15글자를 입력하세요.</label>
 					</dd>
 				</dl>
@@ -87,7 +87,7 @@
 					</dt>
 
 					<dd>
-						<input type="password" id="member_05" name="pwReName" value="" placeholder="암호와 동일한 내용을 작성" class="text-box" />
+						<input type="password" id="member_05" name="pwReName" value="" placeholder="암호와 동일한 내용을 작성" class="text-box" required="required" />
 						<label for="member_05" aria-hidden="true">위와 동일한 암호 입력</label>
 					</dd>
 				</dl>
@@ -117,7 +117,7 @@
 					  	<option value="hotmail.com">hotmail.com</option>
 					  </select>
 					   -->
-					  <input type="text" id="member_06-2" name="emailSelect" value="" class="hidden" />
+					  <input type="text" id="member_06-2" name="emailSelect" value="" class="hidden" required="required" />
 					  <label for="member_06-2" class="hidden">이메일 사이트 항목을 선택하세요 없으면 왼쪽에 기입하세요.</label>
 						<dl class="text-box">
 							<dt><button type="button">사이트 주소<span class="hidden">를 선택하세요.</span><i class="join_img"></i></button></dt>
@@ -138,39 +138,39 @@
 					<dt><label for="member_07"><i class="join_img member_07"></i>주소</label></dt>
 					<dd>
 						<input type="text" id="member_07" name="addressName" value="" 
-										placeholder="주소를 선택/입력" class="text-box" />
-						<button name="findAddress" class="btn-check" type="button">주소찾기</button>
+										placeholder="주소를 선택/입력" class="text-box" required="required" />
+						<button name="findAddress" class="btn-check" type="button" required="required" >주소찾기</button>
 					</dd>
 				</dl>
 				<dl class="join_form clearfix">
 					<dt><label for="member_08"><i class="join_img member_08"></i>휴대폰</label></dt>
 					<dd>
 						<div class="telecom_check">
-							<input type="radio" checked="checked" name="telecom" value="sk" id="member_08" />
+							<input type="radio" checked="checked" name="telecom" value="sk" id="member_08"required="required"  />
 							<label for="member_08"><i class="join_img"></i> sk t<span class="hidden">elecom</span></label>
 
-							<input type="radio" name="telecom" value="kt" id="member_08-1" />
+							<input type="radio" name="telecom" value="kt" id="member_08-1" required="required" />
 							<label for="member_08-1"><i class="join_img"></i> kt<span class="hidden"> telecom</span></label>
 
-							<input type="radio" name="telecom" value="lg" id="member_08-2" />
+							<input type="radio" name="telecom" value="lg" id="member_08-2" required="required" />
 							<label for="member_08-2"><i class="join_img"></i> lg<span class="hidden"> u plus</span></label>
 
-							<input type="radio" name="telecom" value="other" id="member_08-3" />
+							<input type="radio" name="telecom" value="other" id="member_08-3" required="required" />
 							<label for="member_08-3"><i class="join_img"></i> 알뜰폰</label>
 						</div>
 						<div class="tel_number">
 							<input type="text" id="telInput_01" name="telInput_01" value="" max-length="3" 
-										 placeholder="번호 앞자리"  class="text-box" />
+										 placeholder="번호 앞자리"  class="text-box" required="required" />
 						  <label for="telInput_01" class="hidden">사용하고계신 휴대폰 앞자리 번호를 작성해주세요.</label>
 
               <span aria-hidden="true">-</span>
 							<input type="text" id="telInput_02" name="telInput_02" value="" max-length="4" 
-										 placeholder="번호 가운데"  class="text-box" />
+										 placeholder="번호 가운데"  class="text-box" required="required" />
 						  <label for="telInput_02" class="hidden">휴대폰 가운데자리 번호를 작성해주세요.</label>
 
 							<span aria-hidden="true">-</span>
 							<input type="text" id="telInput_03" name="telInput_03" value="" max-length="4" 
-										 placeholder="번호 뒷자리"  class="text-box" />
+										 placeholder="번호 뒷자리"  class="text-box" required="required" />
 						  <label for="telInput_03" class="hidden">휴대폰 뒷자리 번호를 작성해주세요.</label>
 
 						</div>
