--- a/b_example/b_basic/index.html
+++ b/b_example/b_basic/index.html
@@ -17,6 +17,10 @@
     <li><a href="./html/rwd_02.html">반응형 두번째 - 레이아웃기초</a></li>
     <li><a href="./html/rwd_03_homework.html">반응형 세번째 - 기초형태 및 레이아웃</a></li>
     <li><a href="./html/menu_btn_01.html">메뉴버튼클릭</a></li>
+    <li><a href="./html/css_deep_01.html">css추가기능</a></li>
+    <li><a href="./html/perspective.html">perspective</a></li>
+    <li><a href="./html/animation_01.html">html 애니메이션기능</a></li>
+
   </ul>
   <!-- script -->
   <script src="./js/base/jquery-3.3.1.min.js"></script>
