--- a/b_example/b_basic/html/animation_01.html
+++ b/b_example/b_basic/html/animation_01.html
@@ -23,7 +23,15 @@
           <li>05</li>
           <li>06</li>
           <li>07</li>
-        </ul>  
+        </ul> 
+    </div>
+    <h3>transition test1</h3>
+    <div class="move_line">
+      <div class="line_01"></div>
+      <div class="line_02"></div>
+      <div class="line_03"></div>
+      <div class="line_04"></div>
+      <p>움직이는 라인만들기</p>
     </div>
 
   </div>
