transition animation test2

--- a/b_example/b_basic/html/animation_01.html
+++ b/b_example/b_basic/html/animation_01.html
@@ -34,6 +34,64 @@
       <p>움직이는 라인만들기</p>
     </div>
 
+    <h3>transition test2</h3>
+    <div class="multi_link">
+      <ul>
+        <li> 
+          <a href="#">
+            <div class="link_wrap">
+
+              <i aria-hidden="true">+</i>
+              <h4>battery</h4>
+              <h5>up to 10 hours of play time</h5>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing.</p>
+
+            </div>
+          </a> 
+        </li>
+        <li> 
+          <a href="#">
+            <div class="link_wrap">
+              <i aria-hidden="true">+</i>
+              <h4>battery</h4>
+              <h5>up to 10 hours of play time</h5>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing.</p>
+            </div>
+          </a> 
+        </li>
+        <li> 
+          <a href="#">
+            <div class="link_wrap">
+              <i aria-hidden="true">+</i>
+              <h4>battery</h4>
+              <h5>up to 10 hours of play time</h5>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing.</p>
+            </div>
+          </a> 
+        </li>
+        <li> 
+          <a href="#">
+            <div class="link_wrap">
+              <i aria-hidden="true">+</i>
+              <h4>battery</h4>
+              <h5>up to 10 hours of play time</h5>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing.</p>
+            </div>
+          </a> 
+        </li>
+        <li> 
+          <a href="#">
+            <div class="link_wrap">
+              <i aria-hidden="true">+</i>
+              <h4>battery</h4>
+              <h5>up to 10 hours of play time</h5>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing.</p>
+            </div>
+          </a> 
+        </li>
+      </ul>
+    </div>
+
   </div>
   <!-- script -->
   <script src="../js/src/jquery-3.3.1.min.js"></script>
