--- a/b_example/b_basic/html/animation_01.html
+++ b/b_example/b_basic/html/animation_01.html
@@ -91,6 +91,32 @@
         </li>
       </ul>
     </div>
+<!--  =================================================  -->
+    <h2>animation</h2>
+    <p class="ani_narr">animation은 말 그대로 하나의 방향성을 가진형태가 아니라, 
+       시간의 흐름에 따라 변화하게 만들 수 있는 기능을 말한다.
+       이때, 시간의 흐름을 처리할 수 있는 기능( <em>@keyframes {}</em> )이 별도로 필요하다.
+    </p>
+    <p class="ani_narr">
+      @keyframes {} 는 animation 기능을 수행할때, 각 시간의 위치에 따라 작용하는 기능을 제작할 수 있도록 설정하는 기능이다.<br />
+      시간의 시작과 끝을 표현할때에는 0% ~ 100% 까지의 흐름을 표현하기도하며, 처음(0%) 위치를 from으로, 마지막(100%)위치를 to 라고 표기할 수도 있다. 이외의 시간의 위치는 %로 표기한다.
+    </p>
+
+    <div class="ani_box">
+      <input type="checkbox" class="check">
+      <ul>
+        <li>01</li>
+        <li>02</li>
+        <li>03</li>
+        <li>04</li>
+        <li>05</li>
+        <li>06</li>
+        <li>07</li>
+        <li>08</li>
+        <li>09</li>
+        <li>10</li>
+      </ul>
+    </div>
 
   </div>
   <!-- script -->
