--- a/b_example/b_basic/index.html
+++ b/b_example/b_basic/index.html
@@ -20,8 +20,10 @@
     <li><a href="./html/css_deep_01.html">css추가기능</a></li>
     <li><a href="./html/perspective.html">perspective</a></li>
     <li><a href="./html/animation_01.html">html 애니메이션기능</a></li>
-
   </ul>
+  <ol>
+    <li><a href="./html/jquery_on_01.html">jquery on 메소드</a></li>
+  </ol>
   <!-- script -->
   <script src="./js/base/jquery-3.3.1.min.js"></script>
   <script src="./js/base/jquery-ui.min.js"></script>
