--- a/b_example/b_basic/html/jquery_on_01.html
+++ b/b_example/b_basic/html/jquery_on_01.html
@@ -22,6 +22,15 @@
     <p class="result">
       내용: <span></span>
     </p>
+    <!--  ==========  -->
+    <p class="mouse">mouse <span></span></p>
+
+     <ul class="focus">
+       <li><span class="btn" tabindex="1">리얼버튼?</span></li>
+       <li><a href="#" class="btn">버튼?</a></li>
+       <li><button class="btn">버튼?</button></li>
+       <li><input type="button" class="btn" value="버튼!!"></li>
+     </ul>
   </div>
 
 <!-- script -->
