--- a/b_example/b_basic/html/jquery_on_01.html
+++ b/b_example/b_basic/html/jquery_on_01.html
@@ -31,6 +31,8 @@
        <li><button class="btn">버튼?</button></li>
        <li><input type="button" class="btn" value="버튼!!"></li>
      </ul>
+     <input type="text" id="key" value="" placeholder="키를 누르자!">
+     <input type="text" id="key2" value="" placeholder="키2를 누르자!">
   </div>
 
 <!-- script -->
