offset().top 이해

--- a/b_example/b_basic/html/jquery_on_02.html
+++ b/b_example/b_basic/html/jquery_on_02.html
@@ -2,6 +2,7 @@
 <html lang="ko-KR">
 <head>
   <meta charset="UTF-8">
+  
   <link rel="stylesheet" href="../css/base/reset.css">
   <link rel="stylesheet" href="../css/base/common.css">
   <link rel="stylesheet" href="../css/src/jquery_on_02.css">
@@ -43,7 +44,11 @@
       <!-- scroll ====================== -->
       <h2>scroll</h2>
       <div class="position">
-        <p class="fix">현재 브라우저에 고정되었습니다.</p>
+        <p class="fix">현재 브라우저에 고정되었습니다.</p>        
+      </div>
+      <div class="offset">
+        <p class="por">offest: <span></span></p>
+        <p class="pof">offest: <span></span></p>
       </div>
     </div>
 
