mouse wheel 브라우저 동일하게 체크

--- a/b_example/b_basic/index.html
+++ b/b_example/b_basic/index.html
@@ -25,6 +25,7 @@
     <li><a href="./html/jquery_on_01.html">jquery on 메소드</a></li>
     <li><a href="./html/jquery_on_02.html">jquery on 메소드2</a></li>
     <li><a href="./html/jquery_on_03.html">jquery on 메소드3: touch</a></li>
+    <li><a href="./html/jquery_on_04.html">mousescroll</a></li>
   </ol>
   <!-- script -->
   <script src="./js/base/jquery-3.3.1.min.js"></script>
