아코디언 세로형  focus기능으로 처리

--- a/b_example/c_normal/html/jquery/accordion_01.html
+++ b/b_example/c_normal/html/jquery/accordion_01.html
@@ -5,10 +5,10 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
-  <link rel="stylesheet" href="../../css/base/reset.css">
-  <link rel="stylesheet" href="../../css/base/common.css">
-  <link rel="stylesheet" href="../../css/src/jquery/accordion_01.css">
-
+  <link rel="stylesheet" href="../../css/base/reset.css" />
+  <link rel="stylesheet" href="../../css/base/common.css" />
+  <link rel="stylesheet" href="../../css/src/jquery/accordion_01.css" />
+  <link rel="stylesheet" href="../../fontawesome5/css/all.min.css" />
   <!--[if IE]>
     <script src="../../ie/html5shiv/dist/html5shiv.min.js"></script>
     <script src="../../ie/css3pie/PIE_IE9.js"></script>
@@ -27,13 +27,21 @@
       <h2>아코디언1</h2>
       <div class="accordion">
         <dl>
-          <dt><button type="button">아코디언 제목 1</button></dt>
+          <dt><button type="button">아코디언 제목 1 
+            <i class="fas fa-arrow-alt-circle-down" aria-hidden="true"></i>
+          </button></dt>
           <dd>Lorem ipsum dolor sit.</dd>
-          <dt><button type="button">아코디언 제목 2</button></dt>
+          <dt><button type="button">아코디언 제목 2 
+            <i class="fas fa-arrow-alt-circle-down" aria-hidden="true"></i>
+          </button></dt>
           <dd>Lorem ipsum dolor sit amet.</dd>
-          <dt><button type="button">아코디언 제목 3</button></dt>
+          <dt><button type="button">아코디언 제목 3 
+            <i class="fas fa-arrow-alt-circle-down" aria-hidden="true"></i>
+          </button></dt>
           <dd>Lorem ipsum dolor sit amet, consectetur.</dd>
-          <dt><button type="button">아코디언 제목 4</button></dt>
+          <dt><button type="button">아코디언 제목 4 
+            <i class="fas fa-arrow-alt-circle-down" aria-hidden="true"></i>
+          </button></dt>
           <dd>Lorem ipsum dolor sit amet, consectetur adipisicing.</dd>
         </dl>
       </div>
