gnb accordion menu 처리

--- a/b_example/c_normal/html/jquery/accordion_01.html
+++ b/b_example/c_normal/html/jquery/accordion_01.html
@@ -21,6 +21,66 @@
   <div id="wrap">
     <header id="headBox">
       <h1>accordion <br />세로형만들기</h1>
+      <nav id="gnb">
+        <h2 class="hidden">navigation</h2>
+        <div class="gnb_outer">
+          <dl>
+            <dt><a href="#">title_01</a></dt>
+            <dd>
+              <ul>
+                <li><a href="#">sub-01</a></li>
+                <li><a href="#">sub-02</a></li>
+                <li><a href="#">sub-03</a></li>
+                <li><a href="#">sub-04</a></li>
+              </ul>
+            </dd>
+          </dl>
+          <!-- //dl ============================== -->
+          <dl>
+            <dt><a href="#">title_02</a></dt>
+            <dd>
+              <ul>
+                <li><a href="#">sub-01</a></li>
+                <li><a href="#">sub-02</a></li>
+              </ul>
+            </dd>
+          </dl>
+          <!-- //dl ============================== -->
+          <dl>
+            <dt><a href="#">title_03</a></dt>
+            <dd>
+              <ul>
+                <li><a href="#">sub-01</a></li>
+                <li><a href="#">sub-02</a></li>
+                <li><a href="#">sub-03</a></li>
+              </ul>
+            </dd>
+          </dl>
+          <!-- //dl ============================== -->
+          <dl>
+            <dt><a href="#">title_04</a></dt>
+            <dd>
+              <ul>
+                <li><a href="#">sub-01</a></li>
+              </ul>
+            </dd>
+          </dl>
+          <!-- //dl ============================== -->
+          <dl>
+            <dt><a href="#">title_04</a></dt>
+            <dd>
+              <ul>
+                <li><a href="#">sub-01</a></li>
+                <li><a href="#">sub-02</a></li>
+                <li><a href="#">sub-03</a></li>
+                <li><a href="#">sub-04</a></li>
+                <li><a href="#">sub-05</a></li>
+              </ul>
+            </dd>
+          </dl>
+          <!-- //dl ============================== -->
+        </div>
+      </nav>
     </header>
 
     <article id="conBox">
