gnb메뉴 아코디언

--- a/b_example/c_normal/html/jquery/accordion_01.html
+++ b/b_example/c_normal/html/jquery/accordion_01.html
@@ -117,6 +117,7 @@
   <!-- script -->
   <script src="../../js/base/jquery-3.3.1.min.js"></script>
   <script src="../../js/base/jquery-ui.min.js"></script>
+  <script src="../../js/src/jquery/gnbMenu_01.js"></script>
   <script src="../../js/src/jquery/accordion_01.js"></script>
 </body>
 </html>
