--- a/b_example/c_normal/html/jquery/tabmenu_02.html
+++ b/b_example/c_normal/html/jquery/tabmenu_02.html
@@ -22,7 +22,7 @@
   <div class="tab_menu tab">
     <h2 class="hidden">반응형웹에따른 탭메뉴형식변형하기(900,480)</h2>
     <ul>
-      <li><a href="#">menu_01</a></li>
+      <li class="active"><a href="#">menu_01</a></li>
       <li><a href="#">menu_02</a></li>
       <li><a href="#">menu_03</a></li>
       <li><a href="#">menu_04</a></li>
@@ -34,10 +34,11 @@
       <div>content_04<br />lorem40</div>
     </div>
   </div>
+  <!--  ==========================  -->
   <div class="tab_menu mob">
     <h2 class="hidden">반응형웹에따른 탭메뉴형식변형하기(900,480)</h2>
     <ul>
-      <li><a href="#">menu_01</a></li>
+      <li class="active"><a href="#">menu_01</a></li>
       <li><a href="#">menu_02</a></li>
       <li><a href="#">menu_03</a></li>
       <li><a href="#">menu_04</a></li>
