간단한 반응형 적용된 tabmenu

--- a/b_example/c_normal/html/jquery/tabmenu_02.html
+++ b/b_example/c_normal/html/jquery/tabmenu_02.html
@@ -19,7 +19,7 @@
 </head>
 <body>
   <!-- layout -->
-  <div class="tab_menu tab">
+  <div class="tab_menu">
     <h2 class="hidden">반응형웹에따른 탭메뉴형식변형하기(900,480)</h2>
     <ul>
       <li class="active"><a href="#">menu_01</a></li>
@@ -34,24 +34,6 @@
       <div>content_04<br />lorem40</div>
     </div>
   </div>
-  <!--  ==========================  -->
-  <div class="tab_menu mob">
-    <h2 class="hidden">반응형웹에따른 탭메뉴형식변형하기(900,480)</h2>
-    <ul>
-      <li class="active"><a href="#">menu_01</a></li>
-      <li><a href="#">menu_02</a></li>
-      <li><a href="#">menu_03</a></li>
-      <li><a href="#">menu_04</a></li>
-    </ul>
-    <div class="content">
-      <div>content_01<br />lorem100</div>
-      <div>content_02<br />lorem50</div>
-      <div>content_03<br />lorem30</div>
-      <div>content_04<br />lorem40</div>
-    </div>
-  </div>
-
-
 
   <!-- script -->
   <script src="../../js/base/jquery-3.3.1.min.js"></script>
