--- a/b_example/c_normal/html/main.html
+++ b/b_example/c_normal/html/main.html
@@ -37,6 +37,10 @@
       <ul>
         <li><a href="./gcass/main_layout.html">메인페이지 레이아웃 제작</a></li>
       </ul>
+      <h2>monfee 사이트 제작하기</h2>
+      <ul>
+        <li><a href="./monfee/main_layout.html">메인페이지 레이아웃 제작</a></li>
+      </ul>
    </div>
 
   <!-- script(jQuery) -->
