--- a/b_example/c_normal/html/main.html
+++ b/b_example/c_normal/html/main.html
@@ -46,6 +46,6 @@
   <!-- script(jQuery) -->
   <script src="../js/base/jquery-3.3.1.min.js"></script>
   <script src="../js/base/jquery-ui.min.js"></script>
-  <!-- <script src="../js/src/main.js"></script> -->
+  <script src="../js/src/main.js"></script>
 </body>
 </html>
