--- a/b_example/c_normal/html/monfee/main_layout.html
+++ b/b_example/c_normal/html/monfee/main_layout.html
@@ -13,7 +13,7 @@
   <!-- layout -->
   <div id="wrap">
     <header id="headBox">
-      <div class="container">
+      <div class="container view up">
         <h1 class="hidden_wrap">
           <a href="main_layout.html">
             <span>monfee</span>
