--- a/b_example/c_normal/html/monfee/main_layout.html
+++ b/b_example/c_normal/html/monfee/main_layout.html
@@ -12,63 +12,7 @@
 <body>
   <!-- layout -->
   <div id="wrap">
-    <header id="headBox">
-      <div class="container up">
-        <h1 class="hidden_wrap">
-          <a href="main_layout.html">
-            <span>monfee</span>
-          </a>
-        </h1>
-        <nav id="gnb">
-          <h2 class="hidden">global navigation</h2>
-          <div class="list">
-            <dl>
-              <dt><a href="#">
-                <span>monfee <br />story</span>
-              </a></dt>
-              <dd>
-                <a href="#">몽피 이야기</a>
-                <a href="#">회사 소개</a>
-                <a href="#">후원</a>
-              </dd>
-            </dl>
-            <dl>
-              <dt><a href="#">
-                <span>menu</span>
-              </a></dt>
-              <dd>
-                <a href="#">커피류</a>
-                <a href="#"><span class="hidden">커피 외</span> 기타음료</a>
-                <a href="#">음식 및 디저트</a>
-                <a href="#"><span class="hidden">시즌 및 이벤트 행사</span>상품</a>
-                <a href="#">기타</a>
-              </dd>
-            </dl>
-            <dl>
-              <dt>
-                <a href="#"><span>store</span></a></dt>
-              <dd>
-                <a href="#">신규매장</a>
-                <a href="#">매장찾기</a>
-                <a href="#">가맹문의</a>
-                <a href="#">창업설명회</a>
-                <a href="#">창업스토리</a>
-              </dd>
-            </dl>
-            <dl>
-              <dt><a href="#"><span>news</span></a></dt>
-              <dd>
-                <a href="#">이벤트</a>
-                <a href="#">공지사항</a>
-                <a href="#">프로모션</a>
-                <a href="#">미디어 광고</a>
-              </dd>
-            </dl>
-          </div>
-        </nav>
-      </div>
-    </header>
-    <!-- // #headBox =========================================================== -->
+   
 
 
     <section id="adBanner">
@@ -117,6 +61,6 @@
   <!-- script -->
   <script src="../../js/base/jquery-3.3.1.min.js"></script>
   <script src="../../js/base/jquery-ui.min.js"></script>
-  <script src="../../js/src/monfee/head_01.js"></script>
+  <script src="../../js/src/monfee/main_layout.js"></script>
 </body>
 </html>
