banner 기본형태 처리

--- a/b_example/c_normal/html/monfee/main/adBanner.html
+++ b/b_example/c_normal/html/monfee/main/adBanner.html
@@ -4,7 +4,7 @@
   <!-- 인디케이터 -->
   <div class="indicator">
     <ul class="hidden_wrap">
-      <li><button type="button"><span>1번째 광고 이미지 설명</span></button></li>
+      <li class="active"><button type="button"><span>1번째 광고 이미지 설명</span></button></li>
       <li><button type="button"><span>2번째 광고 이미지 설명</span></button></li>
       <li><button type="button"><span>3번째 광고 이미지 설명</span></button></li>
       <li><button type="button"><span>4번째 광고 이미지 설명</span></button></li>
@@ -27,11 +27,11 @@
     </div> 
 
     <ul>
-      <li><span class="hidden">광고 배너 이미지 설명</span></li>
-      <li><span class="hidden">광고 배너 이미지 설명</span></li>
-      <li><span class="hidden">광고 배너 이미지 설명</span></li>
-      <li><span class="hidden">광고 배너 이미지 설명</span></li>
-      <li><span class="hidden">광고 배너 이미지 설명</span></li>
+      <li class="ban_1"><span class="hidden">광고 배너 이미지 설명</span></li>
+      <li class="ban_2"><span class="hidden">광고 배너 이미지 설명</span></li>
+      <li class="ban_3"><span class="hidden">광고 배너 이미지 설명</span></li>
+      <li class="ban_4"><span class="hidden">광고 배너 이미지 설명</span></li>
+      <li class="ban_5"><span class="hidden">광고 배너 이미지 설명</span></li>
     </ul>
 
   </div>
@@ -42,5 +42,5 @@
     </a>
   </div> -->
 
-
+<script src="../../js/src/monfee/adBanner.js"></script>
 <!-- </section> -->
