--- a/b_example/c_normal/html/monfee/main_layout.html
+++ b/b_example/c_normal/html/monfee/main_layout.html
@@ -18,11 +18,9 @@
    
 
     <article id="bestNews">
-      <h2 class="hidden">monfee news</h2>
+      <h2 class="hidden">monfee Issue</h2>
 
-      <div class="news">
-        <div class="container"></div>
-      </div>
+     
 
       <div class="issue_text">
         <div class="container con_plus"></div>
