--- a/b_example/c_normal/html/main.html
+++ b/b_example/c_normal/html/main.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=3.0, minimum-scale=0.5" />
   <link rel="stylesheet" href="../css/base/reset.css" />
   <link rel="stylesheet" href="../css/base/common.css" />
-  <!-- <link rel="stylesheet" href="../css/src/main.css" /> -->
+  <link rel="stylesheet" href="../css/src/main.css" />
   <!--[if IE]>
     <script src="../ie/html5shiv/dist/html5shiv.min.js"></script>
     <script src="../ie/css3pie/PIE_IE9.js"></script>
