--- a/b_example/c_normal/html/monfee/main/issueText.html
+++ b/b_example/c_normal/html/monfee/main/issueText.html
@@ -15,13 +15,13 @@
     </div>
 
     <div class="news_text">
-      <!-- <dl>
+      <dl>
         <dt>monfee news</dt>
         <dd>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur animi aliquam deleniti accusamus, consequuntur eos officia rerum incidunt dolorem ducimus iure quaerat sequi adipisci harum. Voluptatum quidem voluptatem voluptates esse velit maiores, nobis blanditiis explicabo dolorum qui? Beatae, magni dolore.</dd>
       </dl>
       <dl>check_1</dl>
       <dl>check_2</dl>
-      <dl>check_3</dl> -->
+      <dl>check_3</dl>
     </div>
 
     <div class="news_img">
