issueText css setting

--- a/b_example/c_normal/html/monfee/main/issueText.html
+++ b/b_example/c_normal/html/monfee/main/issueText.html
@@ -2,8 +2,8 @@
     <h3 class="hidden">monfee coffee news</h3>
 
     <div class="indi_cator hidden_wrap">
-      <!-- <ul>
-        <li><a href="#"><span>text_1</span></a></li>
+      <ul>
+        <li class="active"><a href="#"><span>text_1</span></a></li>
         <li><a href="#"><span>text_2</span></a></li>
         <li><a href="#"><span>text_3</span></a></li>
         <li><a href="#"><span>text_4</span></a></li>
@@ -11,20 +11,37 @@
       <div class="move_btn">
         <button type="button"><i class="fas" aria-hidden="true"></i><span>일시정지</span></button>
         <button type="button"><i class="fas" aria-hidden="true"></i><span>재생</span></button>
-      </div> -->
+      </div>
     </div>
 
     <div class="news_text">
-      <dl>
-        <dt>monfee news</dt>
-        <dd>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur animi aliquam deleniti accusamus, consequuntur eos officia rerum incidunt dolorem ducimus iure quaerat sequi adipisci harum. Voluptatum quidem voluptatem voluptates esse velit maiores, nobis blanditiis explicabo dolorum qui? Beatae, magni dolore.</dd>
+      <dl class="active">
+        <dt>monfee news_001</dt>
+        <dd>001 _ Lorem ipsum dolor sit amet. Lorem2 ipsum dolor sit amet consectetur adipisicing elit. Consequatur animi aliquam deleniti accusamus, consequuntur eos officia rerum incidunt dolorem ducimus iure quaerat sequi adipisci harum. Voluptatum quidem voluptatem voluptates esse velit maiores, nobis blanditiis explicabo dolorum qui? Beatae, magni dolore.</dd>
       </dl>
-      <dl>check_1</dl>
-      <dl>check_2</dl>
-      <dl>check_3</dl>
+      <dl>
+        <dt>monfee news_002</dt>
+        <dd>002 _ Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente, sint.Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur animi aliquam deleniti accusamus,
+          consequuntur eos officia rerum incidunt dolorem ducimus iure quaerat sequi adipisci harum. Voluptatum quidem
+          voluptatem voluptates esse velit maiores, nobis blanditiis explicabo dolorum qui? Beatae, magni dolore.</dd>
+      </dl>
+      <dl>
+        <dt>monfee news_003</dt>
+        <dd>003 _ Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo dicta aliquam nam quod deleniti laboriosam rem officia esse sit facere.Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur animi aliquam deleniti accusamus,
+          consequuntur eos officia rerum incidunt dolorem ducimus iure quaerat sequi adipisci harum. Voluptatum quidem
+          voluptatem voluptates esse velit maiores, nobis blanditiis explicabo dolorum qui? Beatae, magni dolore.</dd>
+      </dl>
+      <dl>
+        <dt>monfee news_004</dt>
+        <dd>004 _ Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur animi aliquam deleniti accusamus,
+          consequuntur eos officia rerum incidunt dolorem ducimus iure quaerat sequi adipisci harum. Voluptatum quidem
+          voluptatem voluptates esse velit maiores, nobis blanditiis explicabo dolorum qui? Beatae, magni dolore.</dd>
+      </dl>
+  
     </div>
 
     <div class="news_img">
       <!-- image 삽입 -->
     </div>
+    <script src="../../js/src/monfee/issueText.js"></script>
 <!-- </div> -->
