--- a/b_example/b_basic/html/jquery_bannerTest.html
+++ b/b_example/b_basic/html/jquery_bannerTest.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Document</title>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <link rel="stylesheet" href="../css/base/reset.css">
   <link rel="stylesheet" href="../css/base/common.css">
   <style>
