jquery scrolltop button, and scroll fixed

--- a/b_example/c_normal/html/main.html
+++ b/b_example/c_normal/html/main.html
@@ -31,6 +31,8 @@
         <li><a href="./jquery/slide_banner_02.html">slide banner 기능이해하기1</a></li>
         <li><a href="./jquery/inner_content_01.html">내부에 내용을 담는 기능 만들기</a></li>
         <li><a href="./jquery/make_jquery_01_result.html">jquery를 활용하여 html구조를 제작하기</a></li>
+        <li><a href="./jquery/top_btn.html">top button</a></li>
+        <li><a href="./jquery/jquery_example_02.html">jquery_example_02</a></li>
       </ul>
       <hr />
       <h2>gcass 사이트 제작하기</h2>
