--- a/b_example/c_normal/html/jquery/jquery_example_02.html
+++ b/b_example/c_normal/html/jquery/jquery_example_02.html
@@ -44,7 +44,32 @@
         </ul>
       </div>
 
-      <div class="side_move"></div>
+      <div class="side_move">
+        <h3>side에서 내용 나타나기</h3>
+
+        <div class="side_01">
+          <div class="img_view"></div>
+          <p class="text_view">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi quae inventore officia culpa cupiditate mollitia saepe molestiae voluptate ut itaque.</p>
+        </div>
+
+        <div class="side_02">
+          <div class="img_view"></div>
+          <p class="text_view">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic odit placeat amet recusandae pariatur, voluptas rerum accusantium velit ad quod.</p>
+        </div>
+
+        <div class="side_03">
+          <div class="img_view"></div>
+          <p class="text_view">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti eum corporis labore excepturi illum aut similique, libero suscipit id cum.</p>
+        </div>
+
+        <div class="side_04">
+          <div class="img_view">
+            <div class="mv_view"></div>
+          </div>
+          <p class="text_view">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore nemo beatae omnis exercitationem dignissimos, facilis cum deleniti vel similique cupiditate!</p>
+        </div>
+
+      </div>
 
       <div class="double_tab"></div>
     </article>
