--- a/b_example/c_normal/html/jquery/jquery_example_02.html
+++ b/b_example/c_normal/html/jquery/jquery_example_02.html
@@ -237,5 +237,11 @@
   <script src="../../js/base/jquery-3.3.1.min.js"></script>
   <script src="../../js/base/jquery-ui.min.js"></script>
   <script src="../../js/src/jquery/jquery_example_02.js"></script>
+  <script>
+    
+
+    
+
+  </script>
 </body>
 </html>
