--- a/b_example/c_normal/html/jquery/jquery_example_02.html
+++ b/b_example/c_normal/html/jquery/jquery_example_02.html
@@ -19,6 +19,12 @@
 </head>
 <body>
   <!-- layout -->
+  <div class="loading">
+    <div class="loadng_img ani_1"></div>
+    <div class="loadng_img ani_2"></div>
+    <p>loading ...</p>
+  </div>
+
   <div id="wrap">
     <header id="headBox">
       <h1><a href="#">sitename</a></h1>
