--- a/b_example/c_normal/html/main.html
+++ b/b_example/c_normal/html/main.html
@@ -18,6 +18,15 @@
   <link rel="shortcut icon" type="image/x-icon" href="../favicon.png" />
   <link rel="apple-touch-icon" href="../favicon.png" />
   <title>title name</title>
+  <style>
+    #wrap{margin: auto; width: 80%;}
+    h1{padding: 0.5rem; background-color: #0aa; color:#fff; font-size: 1.2rem; text-indent: 3rem;}
+    h2{margin-top: 1rem; color:#0aa; margin-bottom: 0.5rem;}
+    ul{padding: 1rem; box-sizing: border-box; background-color:rgba(0,200,200,0.2);}
+    li{width: 100%; height: 1.5rem; margin-bottom: 0.5rem; border-bottom: 1px solid  #0aa;}
+    li:last-child{margin-bottom: 0;}
+    a{display: block; width: 100%; height: 100%;}
+  </style>
 </head>
 <body>
   <!-- layout -->
@@ -33,6 +42,7 @@
         <li><a href="./jquery/make_jquery_01_result.html">jquery를 활용하여 html구조를 제작하기</a></li>
         <li><a href="./jquery/top_btn.html">top button</a></li>
         <li><a href="./jquery/jquery_example_02.html">jquery_example_02</a></li>
+        <li><a href="./jquery/jquery_example_03.html">jquery_example_03</a></li>
       </ul>
       <hr />
       <h2>gcass 사이트 제작하기</h2>
