--- a/b_example/c_normal/html/main.html
+++ b/b_example/c_normal/html/main.html
@@ -43,6 +43,7 @@
         <li><a href="./jquery/top_btn.html">top button</a></li>
         <li><a href="./jquery/jquery_example_02.html">jquery_example_02</a></li>
         <li><a href="./jquery/jquery_example_03.html">jquery_example_03</a></li>
+        <li><a href="./jquery/horizontal_scroll.html">jquery_가로스크롤의 이해</a></li>
       </ul>
       <hr />
       <h2>gcass 사이트 제작하기</h2>
