mousewheel 기능 수행에대한 내용(전체)

--- a/b_example/c_normal/html/jquery/horizontal_scroll.html
+++ b/b_example/c_normal/html/jquery/horizontal_scroll.html
@@ -46,7 +46,14 @@
 
 
     <article id="contBox">
-      <h2>content</h2>
+      <h2 class="hidden">content</h2>
+      <div class="con_01">content_01</div>
+      <div class="con_02">content_02</div>
+      <div class="con_03">content_03</div>
+      <div class="con_04">content_04</div>
+      <div class="con_05">content_05</div>
+      <div class="con_06">content_06</div>
+      <div class="con_07">content_07</div>
     </article>
 
     <footer id="footBox">
