목록 더보기 버튼 및 게시판 만들기 기초 레이아웃

--- a/b_example/c_normal/html/main.html
+++ b/b_example/c_normal/html/main.html
@@ -45,6 +45,7 @@
         <li><a href="./jquery/jquery_example_03.html">jquery_example_03</a></li>
         <li><a href="./jquery/horizontal_scroll.html">jquery_가로스크롤의 이해</a></li>
         <li><a href="./jquery/multiSlide.html">멀티 슬라이드이해</a></li>
+        <li><a href="./jquery/moreBtn.html">더보기버튼활용 목록 만들기</a></li>
       </ul>
       <hr />
       <h2>gcass 사이트 제작하기</h2>
