--- a/b_example/c_normal/html/jquery/moreBtn.html
+++ b/b_example/c_normal/html/jquery/moreBtn.html
@@ -51,6 +51,6 @@
   <!-- script -->
   <script src="../../js/base/jquery-3.3.1.min.js"></script>
   <script src="../../js/base/jquery-ui.min.js"></script>
-  <script src="../../js/src/jquery/moreBtn.js"></script>
+  <script src="../../js/src/jquery/moreBtn-1.js"></script>
 </body>
 </html>
